--- a/diary/20250522.md
+++ b/diary/20250522.md
@@ -1,2 +1,56 @@
-Early Days
-My background is Mechatronics Engineering, a area covered with mechanical, electrical and a tiny bit of Programming in which took me 4 years to finish. With that being said, the shift of my study toward Information Science, especially Artificial Intelligence, in my opinion was a big shift. The reason for my shift of focus is not easy to put into words. I have always in fascinated by the term Artificial Intelligence since I was smaller when that two words got mentioned on on of media platform, even though I had no idea what it is all about. 
+### 🗓️ **Dev Work Log – May 22, 2025**
+
+#### 👨‍💻 Name: Phong
+
+#### 🏢 Project: AI Diary Assistant (Web App)
+
+#### 🕒 Hours Worked: 8h
+
+---
+
+### ✅ **Tasks Completed**
+
+* 🔧 **Integrated DeepSeek model via Ollama**
+
+  * Pulled and configured `deepseek-coder:1.3b-instruct`
+  * Fixed incorrect model name bug causing empty responses
+  * Implemented prompt injection with today’s date for contextual answers
+  * Handled fallback logic for no diary entry found
+
+* 🌐 **Flask Backend Updates**
+
+  * Connected `/ask` route with `ask_deepseek()` logic
+  * Ensured JSON response is clean and informative
+  * Debugged JSON decoding issues with Ollama response
+
+* 📁 **Refactored Prompt Logic**
+
+  * Unified prompt template between Gemini and DeepSeek
+  * Added diary context parsing (range and single date)
+
+* 🧪 **Test Coverage**
+
+  * Manual API testing using `curl` and Postman
+  * Confirmed diary prompt accuracy and model responsiveness
+
+---
+
+### 🚧 **Issues Faced**
+
+* Model mismatch (`deepseek:1.3b-instruct` vs `deepseek-coder:1.3b-instruct`)
+* Ollama returns excessive metadata — needed to filter `response` only
+
+---
+
+### 🧠 **Learnings**
+
+* Ollama model responses aren’t standardized — requires custom parsing
+* Embedding context like date and logs improves model performance drastically
+
+---
+
+### 🔜 **Next Steps (Tomorrow)**
+
+* Render formatted summary on the frontend
+* Store query logs for review and feedback loop
+* Evaluate other models (e.g., LLaMA3, Gemma) for summarization performance
